--- a/cra-pwa/src/App.css
+++ b/cra-pwa/src/App.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: black;
+    scrollbar-width: thin;
 }
 
 a{
@@ -18,4 +18,9 @@ a{
     border: 8px solid black;
     margin: 5px;
     padding: 5px;
+}
+
+*::-webkit-scrollbar{
+    width: 8px;
+    background-color: grey;
 }
